--- a/AAPL Stock Price Prediction Using PyCaret-Copy1.ipynb
+++ b/AAPL Stock Price Prediction Using PyCaret-Copy1.ipynb
@@ -336,11 +336,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bfe0a1e",
+   "id": "0a0d4600",
    "metadata": {},
    "source": [
     "<br>\n",
-    "<font color = red><b>Note:</font></b> Unfortunately Pandas Profiling Reports <b>can't</b> be displayed on GitHub. However, <b>Report1.html</b> is available in this repository to be <b>downloaded</b> and you will be able to have full acess to the report and check all the informations available."
+    "<font color = red><b>Note:</b></font> Unfortunately Pandas Profiling Reports <b>can't</b> be displayed on GitHub. However, <b>Report1.html</b> is available in this repository to be <b>downloaded</b> and you will be able to have full acess to the report and check all the informations available."
    ]
   },
   {
@@ -833,11 +833,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22b8d107",
+   "id": "ca5141c2",
    "metadata": {},
    "source": [
     "<br>\n",
-    "<font color = red><b>Note:</font></b> Unfortunately Pandas Profiling Reports <b>can't</b> be displayed on GitHub. However, <b>Report2.html</b> is available in this repository to be <b>downloaded</b> and you will be able to have full acess to the report and check all the informations available."
+    "<font color = red><b>Note:</b></font> Unfortunately Pandas Profiling Reports <b>can't</b> be displayed on GitHub. However, <b>Report2.html</b> is available in this repository to be <b>downloaded</b> and you will be able to have full acess to the report and check all the informations available."
    ]
   },
   {
