--- a/AAPL Stock Price Prediction Using PyCaret-Copy1.ipynb
+++ b/AAPL Stock Price Prediction Using PyCaret-Copy1.ipynb
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f93938b6",
+   "id": "a03a82f8",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5121b7df",
+   "id": "6b6ea36d",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -2616,8 +2616,8 @@
    "id": "025862a9",
    "metadata": {},
    "source": [
-    "**Bayesian Ridge** and **Least Angle Regression** achieved the exact same values for the accuracy metrics,except for the RMSE metric, while **Ridge Regression** had a worse MAE value when compared to the other two.<br><br>\n",
-    "In this project, I have no intention in detailing what exactly are the metrics above nor the equations behind them. However, I'll leave <a href =\"https://www.dataquest.io/blog/understanding-regression-error-metrics/\">this article</a> detailing how you can interpret the regression error metrics, the equations behind them and how to calculate them in Python.<br><br>\n",
+    "**Bayesian Ridge** and **Least Angle Regression** achieved the exact same values for the accuracy metrics, while **Ridge Regression** had a worse MAE value when compared to the other two.<br><br>\n",
+    "In this project, I have no intention in detailing what exactly are the metrics above nor the equations behind them. However, I'll leave <a href =\"https://www.dataquest.io/blog/understanding-regression-error-metrics/\">this article</a> detailing how you can interpret the regression error metrics and how to calculate them in Python.<br><br>\n",
     "It seems that the **Bayesian Ridge** is the best among the top three."
    ]
   },
@@ -3112,7 +3112,7 @@
    "metadata": {},
    "source": [
     "# Tuning Models<br><br>\n",
-    "In order to increase the regression error metrics of each one of our models, we may use PyCaret's *tune_model( )* to see the improvements we can make."
+    "In order to improve the regression error metrics of each one of our models, we may use PyCaret's *tune_model( )* to see the improvements we can make."
    ]
   },
   {
@@ -4034,7 +4034,7 @@
    "metadata": {},
    "source": [
     "# Conclusion<br><br>\n",
-    "We can conclude that the PyCaret lib offers an easy way to explore and test different regression models of **machine learning** and choose which one of them is the best for de dataset used.<br><br>\n",
+    "We can conclude that the PyCaret lib offers an easy way to explore and test different regression models of **machine learning** and choose which one of them is the best for the dataset used.<br><br>\n",
     "With this study, it was possible to find a model that adjusted **very well** to our data and that was capable to predict the closing prices of the last 2 years with high levels of accuracy, sucessfuly indicating the direction of APPL stocks in that period.<br><br>\n",
     "Once again, I reinforce that this project has the sole goal of exploring PyCaret's Regression lib and I've no intention of recommending the purchase or sale of any financial asset nor I recommend using this strategy blindly to make investment decisions. "
    ]
